Use 201 Created instead of 200 OK
