# generated/restapi/operations/deposit_new_resource_responses.go
@@ -13,41 +13,41 @@ import (
 	"github.com/sul-dlss-labs/taco/generated/models"
 )
 
-// DepositNewResourceOKCode is the HTTP code returned for type DepositNewResourceOK
-const DepositNewResourceOKCode int = 200
+// DepositNewResourceCreatedCode is the HTTP code returned for type DepositNewResourceCreated
+const DepositNewResourceCreatedCode int = 201
 
-/*DepositNewResourceOK Success response
+/*DepositNewResourceCreated Created
 
-swagger:response depositNewResourceOK
+swagger:response depositNewResourceCreated
 */
-type DepositNewResourceOK struct {
+type DepositNewResourceCreated struct {
 
 	/*
 	  In: Body
 	*/
-	Payload *models.DepositNewResourceOKBody `json:"body,omitempty"`
+	Payload *models.DepositNewResourceCreatedBody `json:"body,omitempty"`
 }
 
-// NewDepositNewResourceOK creates DepositNewResourceOK with default headers values
-func NewDepositNewResourceOK() *DepositNewResourceOK {
-	return &DepositNewResourceOK{}
+// NewDepositNewResourceCreated creates DepositNewResourceCreated with default headers values
+func NewDepositNewResourceCreated() *DepositNewResourceCreated {
+	return &DepositNewResourceCreated{}
 }
 
-// WithPayload adds the payload to the deposit new resource o k response
-func (o *DepositNewResourceOK) WithPayload(payload *models.DepositNewResourceOKBody) *DepositNewResourceOK {
+// WithPayload adds the payload to the deposit new resource created response
+func (o *DepositNewResourceCreated) WithPayload(payload *models.DepositNewResourceCreatedBody) *DepositNewResourceCreated {
 	o.Payload = payload
 	return o
 }
 
-// SetPayload sets the payload to the deposit new resource o k response
-func (o *DepositNewResourceOK) SetPayload(payload *models.DepositNewResourceOKBody) {
+// SetPayload sets the payload to the deposit new resource created response
+func (o *DepositNewResourceCreated) SetPayload(payload *models.DepositNewResourceCreatedBody) {
 	o.Payload = payload
 }
 
 // WriteResponse to the client
-func (o *DepositNewResourceOK) WriteResponse(rw http.ResponseWriter, producer runtime.Producer) {
+func (o *DepositNewResourceCreated) WriteResponse(rw http.ResponseWriter, producer runtime.Producer) {
 
-	rw.WriteHeader(200)
+	rw.WriteHeader(201)
 	if o.Payload != nil {
 		payload := o.Payload
 		if err := producer.Produce(rw, payload); err != nil {
