# swagger.json
@@ -30,8 +30,8 @@
           }
         } ],
         "responses" : {
-          "200" : {
-            "description" : "Success response",
+          "201" : {
+            "description" : "Created",
             "schema" : {
               "type" : "object",
               "properties" : {
